datasets/dataset_txt/keras/keras_6761.txt
bangrui commented on 17 Aug 2015
Hi guys,
I just updated my keras package and now I can't import Sequential properly. It will give me the following erros:
File "/usr/lib/python2.6/site-packages/Keras-0.1.2-py2.6.egg/keras/models.py", line 118
if model_name not in {'Graph', 'Sequential'}:
^
SyntaxError: invalid syntax
Could anyone help me?